updated for new backend features
